<resources>
    <string name="app_name">WeatherApp</string>

    <string name="api_key">ebbc66b823072502c81339f5b0b9b042</string>
    <string name="upArrow">↑</string>
    <string name="downArrow">↓</string>
    <string name="quote">Enjoy the clouds, awaits for splashes</string>
    <string name="forecast">Forecast</string>
    <string name="_23c">23C</string>
    <string name="weather_image">Weather image</string>
    <string name="click_to_search">Click to search</string>
    <string name="enter_city_name_and_click_to_search">Enter city name and click to search</string>
    <string name="search_city">Search City</string>
    <string name="add_as_favourite"><u> Add as favourite </u></string>
    <string name="view_favourite_list">View favourite list</string>
</resources>
